<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/block_padding">

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/internet_connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginBottom="@dimen/paragraph_margin"
            tools:text="Internet"
            android:id="@+id/internet_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/charging_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginBottom="@dimen/paragraph_margin"
            tools:text="Charging"
            android:id="@+id/device_charging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/headphones_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginBottom="@dimen/paragraph_margin"
            tools:text="Headphones"
            android:id="@+id/headphones_plugged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/time_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginBottom="@dimen/paragraph_margin"
            tools:text="Date/Timezone"
            android:id="@+id/current_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>