<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:padding="@dimen/block_padding">

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/blue_fragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            tools:text="@tools:sample/cities"
            android:layout_marginBottom="@dimen/paragraph_margin"
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/blue_fragment_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            tools:text="@tools:sample/cities"
            android:layout_marginBottom="@dimen/paragraph_margin"
            android:id="@+id/switch_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="@dimen/text_header_size"
            android:text="@string/blue_fragment_button_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            tools:text="@tools:sample/cities"
            android:layout_marginBottom="@dimen/paragraph_margin"
            android:id="@+id/button_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>